--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
     html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
 
     canvas { display:block; } /* To remove the scrollbars */
+
+    .help {
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, 0);
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 10px;
+    }
   </style>
   <title>Game of life</title>
 </head>
 <body>
+  <div class="help">
+    Space to pause/unpause. Click on a cell to activate it.
+  </div>
   <canvas id="c"></canvas>
 
 
